Add util dependency

--- a/packages/lang/package.json
+++ b/packages/lang/package.json
@@ -12,5 +12,8 @@
   "private": true,
   "scripts": {
     "prepare": "gulp build:lang"
+  },
+  "dependencies": {
+    "@alfa/util": "0.0.0"
   }
 }
