--- a/docs/architecture/decisions/adr-004.md
+++ b/docs/architecture/decisions/adr-004.md
@@ -4,7 +4,7 @@
 
 ## Context
 
-Having decided on [ADR 2](adr-002.md), we will no longer be tied to any one specific browser and are left with the choice of what to about things that browsers are not aligned on. For example, if Alfa needs to implement an API to perform a given task and a given set of browsers do not agree on how the API should be implemented, Alfa can do several things:
+Having decided on [ADR 2](adr-002.md), we will no longer be tied to any one specific browser and are left with the choice of what to do about things that browsers are not aligned on. For example, if Alfa needs to implement an API to perform a given task and a given set of browsers do not agree on how the API should be implemented, Alfa can do several things:
 
 1. Implement the API the way it is implemented in the _least_ capable browser, in terms of the API, among a given set of browsers.
 
@@ -27,3 +27,7 @@ To decrease the complexity of working with browser specific values, we will impl
 Accepted.
 
 ## Consequences
+
+By providing a building block for modelling browser specific values, we are in a position to substantially increase the usefulness of Alfa for individuals and organisations that need results for not just a single browser but a range of browsers, old or new.
+
+The onus is of course on us, the Alfa development team, to account for misalignment between browsers and to constantly stay on top of it. We must be pragmatic about when and where to account for browser misalignment and find a balance between complexity added and value provided.
